Updated by task 'AUTO_TM_MT_1763398741075' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/release-notes.en/commit/21f4ccbe3ce8f3943e83041566df9879ab758488

--- a/c-legacy-releases/2024/02142024.md
+++ b/c-legacy-releases/2024/02142024.md
@@ -6,9 +6,9 @@ last-update: February 2024
 author: mfrei
 mini-toc-levels: 2
 exl-id: 7bde64df-af93-4754-9698-9af6919a2976
-source-git-commit: 828aac334fdc401738e4934263345b76761a3ae8
+source-git-commit: 21f4ccbe3ce8f3943e83041566df9879ab758488
 workflow-type: tm+mt
-source-wordcount: '5165'
+source-wordcount: '5123'
 ht-degree: 99%
 
 ---
@@ -26,7 +26,7 @@ ht-degree: 99%
 * 即將推出的 Experience League 活動
 * 最新影片教學課程
 
-為了獲得最佳的自助體驗，請登入 [Experience League](https://experienceleague.adobe.com/zh-hant#home)，並在 Adobe 免費的[文件](https://experienceleague.adobe.com/docs/?lang=zh-Hant)、[課程](https://experienceleague.adobe.com/zh-hant#courses)、[活動](https://experienceleague.adobe.com/events/?lang=zh-Hant)、[社群論壇](https://experienceleaguecommunities.adobe.com/?profile.language=en)和[支援](https://experienceleague.adobe.com/zh-hant?support-tab=home#support)等資源庫中自訂您的搜尋體驗。
+為了獲得最佳的自助體驗，請登入 [Experience League](https://experienceleague.adobe.com/#home)，並在 Adobe 免費的[文件](https://experienceleague.adobe.com/docs/)、[課程](https://experienceleague.adobe.com/#courses)、[活動](https://experienceleague.adobe.com/events/)、[社群論壇](https://experienceleaguecommunities.adobe.com/?profile.language=en)和[支援](https://experienceleague.adobe.com/?support-tab=home#support)等資源庫中自訂您的搜尋體驗。
 
 ## 2024 年 2 月
 
@@ -68,7 +68,7 @@ ht-degree: 99%
 
 +++詳細資料
 
-在Experience League上檢視所有[即將舉辦的活動](https://experienceleague.adobe.com/events/?lang=zh-Hant)或瀏覽[活動錄製](https://experienceleague.adobe.com/docs/events/experience-league-recorded-events/overview.html?lang=zh-Hant)。
+在Experience League上檢視所有[即將舉辦的活動](https://experienceleague.adobe.com/events/)或瀏覽[活動錄製](https://experienceleague.adobe.com/docs/events/experience-league-recorded-events/overview.html)。
 
 +++
 
@@ -220,7 +220,7 @@ ht-degree: 99%
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|----|----|-----------|
-| 2024 年 1 月 | [非管理員使用者無法取得  [!DNL eVars] 的特定資料](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21705.html?lang=zh-Hant) | 新文章 | 本文詳細概觀了為什麼非管理員使用者無法取得 [!DNL Adobe Analytics] 中的 [!DNL eVars] 特定資料。管理員使用者可以指派維度或將維度對應到 [!UICONTROL &#x200B; Media Analytics 工作區]。 |
+| 2024 年 1 月 | [非管理員使用者無法取得  [!DNL eVars] 的特定資料](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21705.html?lang=zh-Hant) | 新文章 | 本文詳細概觀了為什麼非管理員使用者無法取得 [!DNL Adobe Analytics] 中的 [!DNL eVars] 特定資料。管理員使用者可以指派維度或將維度對應到 [!UICONTROL  Media Analytics 工作區]。 |
 
 {style="table-layout:auto"}
 
@@ -278,7 +278,7 @@ Adobe 建議您瀏覽以下資源，以隨時掌握發佈內容資訊：
 
 ### 最新版本概觀影片
 
-觀看 [2024 年 1 月版本概觀影片](https://video.tv.adobe.com/v/3448940?captions=chi_hant&quality=12")，了解 2024.01.0 (2024 年 1 月) 版本新增功能摘要。
+觀看 [2024 年 1 月版本概觀影片](https://video.tv.adobe.com/v/3427041?quality=12")，了解 2024.01.0 (2024 年 1 月) 版本新增功能摘要。
 
 ### [!DNL Experience Manager Sites] as a [!DNL Cloud Service]
 
@@ -442,7 +442,7 @@ _已知問題_
 | ----------| ---------- | ---------- | ---------- |---------- |
 | 2024 年 2 月 | AEM Sites | [編寫日誌和 AEM 活動](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/aem-eventing/examples/journaling.html?lang=zh-Hant) | 影片 | 了解如何從日誌中檢索初始的 AEM 事件集並探索有關每個事件的詳細資訊。 |
 | 2024 年 2 月 | AEM Sites | [使用 Adobe I/O Runtime 動作處理 AEM 事件](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/aem-eventing/examples/event-processing-using-runtime-action.html?lang=zh-Hant) | 影片 | 了解如何使用 Adobe I/O Runtime 動作處理接收到的 AEM 事件。 |
-| 2024 年 2 月 | AEM Sites | [&#x200B; Adobe I/O Runtime 動作與 AEM 事件](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/aem-eventing/examples/runtime-action.html?lang=zh-Hant) | 影片 | 了解如何使用 Adobe I/O Runtime 動作接收 AEM 事件並查看事件詳細資訊，例如承載、標題和中繼資料。 |
+| 2024 年 2 月 | AEM Sites | [ Adobe I/O Runtime 動作與 AEM 事件](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/aem-eventing/examples/runtime-action.html?lang=zh-Hant) | 影片 | 了解如何使用 Adobe I/O Runtime 動作接收 AEM 事件並查看事件詳細資訊，例如承載、標題和中繼資料。 |
 | 2024 年 2 月 | AEM Assets | [使用大量匯入](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/migration/bulk-import.html?lang=zh-Hant) | 影片 | 了解如何使用 AEM as a Cloud Service 中的大量匯入工具以安全且有效率的方式從雲端儲存空間大量匯入資產。 |
 | 2024 年 2 月 | [!DNL AEM Assets] | [尋找類似影像](https://experienceleague.adobe.com/docs/experience-manager-learn/assets/search-and-discovery/find-similar-images.html?lang=zh-Hant) | 影片 | 了解 [!DNL AEM Assets] 中的「[!UICONTROL 尋找相似影像]」如何讓您輕鬆找到最符合您需求的影像。 |
 | 2024 年 2 月 | [!DNL AEM Assets] | [切換檢視](https://experienceleague.adobe.com/docs/experience-manager-learn/assets/authoring/switch-views.html?lang=zh-Hant) | 影片 | 了解如何在 [!DNL AEM Assets as a Cloud Service] 中有效率地切換檢視，確保無縫資產管理。 |
@@ -464,7 +464,7 @@ _已知問題_
 | 2024 年 1 月 | [在 [!UICONTROL Dynamic Media] 上使用[!UICONTROL 智慧影像]出現影像過大的狀況](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23359.html?lang=zh-Hant) | 新文章 | 了解在 [!UICONTROL Dynamic Media] 使用[!UICONTROL 智慧影像]時，有時影像尺寸會比預期中更大的問題。 |
 | 2024 年 1 月 | [在 [!UICONTROL Admin Console] 的使用者群組變更未能反映在  [!DNL AEM]](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23390.html?lang=zh-Hant) | 新文章 | 了解在 [!UICONTROL Admin Console] 修改使用者群組時，變更可能不會立即顯示在 [!DNL Adobe Experience Manager (AEM)] 的問題解決方案。 |
 | 2024 年 1 月 | [無法移動 [!UICONTROL 經驗片段]](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23391.html?lang=zh-Hant) | 新文章 | 了解有人在 [!DNL Adobe Experience Manager 6.5] 嘗試移動 [!UICONTROL 內容片段]時，[!DNL UI] 會旋轉，且移動作業無法完成的問題解決方案。 |
-| 2024 年 1 月 | [&#x200B; [!DNL AEMaaCS] 鎖定的複製佇列](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23465.html?lang=zh-Hant) | 新文章 | 了解當 [!UICONTROL 複製佇列]在 [!DNL Adobe Experience Manager as a Cloud Service (AEMaaCS)] 被鎖定的問題解決方案。 |
+| 2024 年 1 月 | [ [!DNL AEMaaCS] 鎖定的複製佇列](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23465.html?lang=zh-Hant) | 新文章 | 了解當 [!UICONTROL 複製佇列]在 [!DNL Adobe Experience Manager as a Cloud Service (AEMaaCS)] 被鎖定的問題解決方案。 |
 | 2024 年 1 月 | [[!UICONTROL 目標模式]沒有出現在 [!UICONTROL Sites]](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23485.html?lang=zh-Hant) | 新文章 | 了解當 [!UICONTROL 目標模式]沒有出現在 [!UICONTROL Sites時 [!DNL AEMaaCS] 問題的解決方案]。 |
 | 2024 年 1 月 | [如何在  [!DNL AEM as a Cloud Service] 恢復已刪除的內容路徑](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23505.html?lang=zh-Hant) | 新文章 | 了解當您需要尋找在 [!DNL Adobe Experience Manager as a Cloud Service] 恢復特定內容路徑的不同方法時的問題解決方案。 |
 
@@ -486,12 +486,12 @@ _已知問題_
 
 [!DNL Experience Manager Guides] is an application deployed onto AEM. It is a powerful, enterprise-grade component content management solution (CCMS) which enables native DITA support in Adobe Experience Manager, empowering AEM to handle DITA-based content creation and delivery.
 
-Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/tw/products/experience-manager/guides/features.html).
+Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/products/experience-manager/guides/features.html).
 
 ### Additional resources
 
-* [[!DNL Experience Manager Guides]](https://experienceleague.adobe.com/docs/experience-manager-guides-learn/videos/overview.html?lang=zh-Hant) - tutorials on Experience League
-* [[!DNL Experience Manager Guides] Learn & Support](https://helpx.adobe.com/tw/support/xml-documentation-for-experience-manager.html) - product documentation -->
+* [[!DNL Experience Manager Guides]](https://experienceleague.adobe.com/docs/experience-manager-guides-learn/videos/overview.html) - tutorials on Experience League
+* [[!DNL Experience Manager Guides] Learn & Support](https://helpx.adobe.com/support/xml-documentation-for-experience-manager.html) - product documentation -->
 
 ## [!DNL Adobe Commerce] {#commerce}
 
@@ -499,7 +499,7 @@ Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/t
 
 +++詳細資料
 
-* 請參閱 [&#x200B; [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/docs/commerce-operations/release/notes/overview.html?lang=zh-Hant)以取得最新資訊。
+* 請參閱 [ [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/docs/commerce-operations/release/notes/overview.html?lang=zh-Hant)以取得最新資訊。
 * 請參閱「[Adobe Commerce 服務指南](https://experienceleague.adobe.com/docs/commerce-merchant-services/user-guides/home.html?lang=zh-Hant)」以查看 Commerce 服務發行資訊和文件。
 * 請參閱[產品可用性](https://experienceleague.adobe.com/docs/commerce-operations/release/product-availability.html?lang=zh-Hant)以存取個別的產品發行說明並確認可用性。
 
@@ -582,7 +582,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 | 2024 年 1 月 | [[!DNL BigQuery] 錯誤：*欄位 `iMessageType` 已將類型從 `INTEGER` 變更為`BOOLEAN`*](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23348.html?lang=zh-Hant) | 新文章 | 如果您嘗試將 `INT8` 位元資料從 [!DNL Adobe Campaign Classic] 插入到 [!DNL GCP BigQuery] 而收到 [!DNL BigQuery] 錯誤時，請參閱此解決方案。 |
 | 2024 年 1 月 | [找不到金鑰 `HKEY_LOCAL_MACHINE \ SOFTWARE \ Neolane \ NL_5 \ nlclient \ error`](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23311.html?lang=zh-Hant) | 新文章 | 了解如何以管理員身分執行用戶端主控台來解決 [!DNL Adobe Campaign Classic v7] 上的登入問題。 |
 | 2024 年 1 月 | [傳遞記錄中的鏡像頁面連結未載入](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23365.html?lang=zh-Hant) | 新文章 | 了解傳遞記錄中的鏡像頁面連結未載入時的解決方案。 |
-| 2024 年 1 月 | [&#x200B; [!DNL Google BigQuery]  結構描述的時區不正確)](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23329.html?lang=zh-Hant) | 新文章 | 在 [!DNL Adobe Campaign Classic v8.5] 時，讀取 [!DNL Google BigQuery] 表格在結構描述層級定義為 `datetimetz` 欄位中的資料時，如果顯示的資料和小時未包含操作者的時區資訊，請參閱此問題解決結構描述。 |
+| 2024 年 1 月 | [ [!DNL Google BigQuery]  結構描述的時區不正確)](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23329.html?lang=zh-Hant) | 新文章 | 在 [!DNL Adobe Campaign Classic v8.5] 時，讀取 [!DNL Google BigQuery] 表格在結構描述層級定義為 `datetimetz` 欄位中的資料時，如果顯示的資料和小時未包含操作者的時區資訊，請參閱此問題解決結構描述。 |
 | 2024 年 1 月 | [[!DNL mcSync] 工作流程因鎖死錯誤而失敗](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23471.html?lang=zh-Hant) | 新文章 | 了解在 [!DNL Adobe Campaign Classic v7] 中，當 [!DNL mcSync] 工作流程因鎖死錯誤而失敗時的問題解決方案。 |
 | 2024 年 1 月 | [無法編輯品牌化設定 [!DNL ACS]](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23461.html?lang=zh-Hant) | 新文章 | 了解無法在 [!DNL ACS] 中編輯品牌化設定時 [!DNL Campaign Standard] 問題的解決方案。 |
 
@@ -615,11 +615,9 @@ Adobe Commerce 的新文章和現有文章的更新。
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2024 年 2 月 | [預覽、校樣和發佈](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/email-channel/preview-proof-and-publish.html?lang=zh-Hant) | 影片 | 瞭解如何使用 Litmus 測試各收件匣間的電子郵件呈現、如何根據測試輪廓預覽您的個人化電子郵件、傳送校樣及發佈您的電子郵件。 |
-| 2024 年 2 月 | [發佈歷程和歷程狀態](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/create-journeys/publish-a-journey.html?lang=zh-Hant) | 影片 | 瞭解歷程的不同狀態，以及發佈的影響。 |
 | 2024 年 2 月 | [為行銷人員提供的行動裝置功能](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/introduction-to-journey-optimizer/mobile-capabilities.html?lang=zh-Hant) | 影片 | 了解 Adobe Journey Optimizer 為行銷人員提供的行動裝置功能。 |
 | 2024 年 2 月 | [Sinch 和 Infobip 的雙重選擇加入](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/sms-channel/sms-double-opt-in.html?lang=zh-Hant) | 影片 | 了解如何為 SMS 設定雙重選擇加入。 |
 | 2024 年 2 月 | [重要功能和使用者介面](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/introduction-to-journey-optimizer/key-capabilities-and-user-interface.html?lang=zh-Hant) | 影片 | 瞭解 Journey Optimizer 的重要功能和人物誌。 瞭解如何使用使用者介面。 |
-| 2024 年 2 月 | [建立歷程簡介](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/create-journeys/introduction-to-building-a-journey.html?lang=zh-Hant) | 影片 | 瞭解在歷程畫布中建立歷程的基本概念。 |
 
 {style="table-layout:auto"}
 
@@ -630,9 +628,9 @@ New articles and updates to existing articles for [!DNL Journey Optimizer].
 
 |Published|Name|Type|Description|
 |---------|----|----|-----------|
-|December 2023|[Inaccurate click volume in [!DNL AJO] email tracking data](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23027.html?lang=zh-Hant)|New article| Learn about one of the possible causes for discrepancies in email-tracking data.|
-|December 2023|[Segment didn't evaluate a profile, but [!DNL Journey] still sent an email](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22975.html?lang=zh-Hant)|New article| Learn about if [!DNL Journey] sends out emails even when [!DNL Segment] has not evaluated any profiles.|
-|December 2023|[[!DNL AJO] - `now()` timestamp adding extra digits to the milliseconds](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22978.html?lang=zh-Hant)|New article| Learn how to resolve the issue with importing files when the `now()` timestamp adds extra digits to the milliseconds.|
+|December 2023|[Inaccurate click volume in [!DNL AJO] email tracking data](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23027.html)|New article| Learn about one of the possible causes for discrepancies in email-tracking data.|
+|December 2023|[Segment didn't evaluate a profile, but [!DNL Journey] still sent an email](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22975.html)|New article| Learn about if [!DNL Journey] sends out emails even when [!DNL Segment] has not evaluated any profiles.|
+|December 2023|[[!DNL AJO] - `now()` timestamp adding extra digits to the milliseconds](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22978.html)|New article| Learn how to resolve the issue with importing files when the `now()` timestamp adds extra digits to the milliseconds.|
 
 {style="table-layout:auto"}
 -->
@@ -714,12 +712,12 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 |Published|Name|Type|Description|
 | -----------| ---------- | ---------- | ---------- |
-|December 2023|[[!DNL Workfront]: Apply layout template](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23173.html?lang=zh-Hant)|New article| Learn how to apply the layout template in four ways: [!UICONTROL User profile], [!UICONTROL Job Role], [!UICONTROL Home Team], and [!UICONTROL Home Group].|
-|December 2023|[[!DNL Workfront]: proof failed to generate](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23149.html?lang=zh-Hant)|New article| Learn how to resolve the `Proof Failed to Generate` error when you upload a new proof.|
-|December 2023|[[!DNL Fusion]: `Failed to verify connection '52174'. Status Code Error: 500`](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23142.html?lang=zh-Hant)|New article| Learn how to resolve the [!DNL Workfront Fusion] error, `Failed to verify connection '52174'. Status Code Error: 500`.|
-|December 2023|[[!DNL Workfront]: Stuck export](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23080.html?lang=zh-Hant)|New article| Learn how to resolve the issue if your [!UICONTROL Kick-start] export or a [!UICONTROL Resource Planner] export is stuck.|
-|December 2023|[[!DNL Workfront Fusion]: `JWT Connection Error` for [!DNL AEM Assets Fusion]](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22911.html?lang=zh-Hant)|New article| Learn how to resolve if a `JWT connection error` occurs while configuring a connection for [!DNL AEM Assets as a Cloud Service] using the [!DNL Fusion AEM Assets] module.|
-|December 2023|[Project sharing lists are automatically pre-populated on creating new projects](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23045.html?lang=zh-Hant)|New article| Learn how to resolve if project sharing lists get automatically pre-populated.|
+|December 2023|[[!DNL Workfront]: Apply layout template](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23173.html)|New article| Learn how to apply the layout template in four ways: [!UICONTROL User profile], [!UICONTROL Job Role], [!UICONTROL Home Team], and [!UICONTROL Home Group].|
+|December 2023|[[!DNL Workfront]: proof failed to generate](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23149.html)|New article| Learn how to resolve the `Proof Failed to Generate` error when you upload a new proof.|
+|December 2023|[[!DNL Fusion]: `Failed to verify connection '52174'. Status Code Error: 500`](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23142.html)|New article| Learn how to resolve the [!DNL Workfront Fusion] error, `Failed to verify connection '52174'. Status Code Error: 500`.|
+|December 2023|[[!DNL Workfront]: Stuck export](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23080.html)|New article| Learn how to resolve the issue if your [!UICONTROL Kick-start] export or a [!UICONTROL Resource Planner] export is stuck.|
+|December 2023|[[!DNL Workfront Fusion]: `JWT Connection Error` for [!DNL AEM Assets Fusion]](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22911.html)|New article| Learn how to resolve if a `JWT connection error` occurs while configuring a connection for [!DNL AEM Assets as a Cloud Service] using the [!DNL Fusion AEM Assets] module.|
+|December 2023|[Project sharing lists are automatically pre-populated on creating new projects](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23045.html)|New article| Learn how to resolve if project sharing lists get automatically pre-populated.|
 
 {style="table-layout:auto"}
 -->
@@ -747,11 +745,11 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 ### [!DNL Advertising DSP] 中的新功能 {#advertising-dsp}
 
-查看 [&#x200B; [!DNL Advertising DSP] 中的新增功能](https://experienceleague.adobe.com/docs/advertising/dsp/home.html?lang=zh-Hant)
+查看 [ [!DNL Advertising DSP] 中的新增功能](https://experienceleague.adobe.com/docs/advertising/dsp/home.html?lang=zh-Hant)
 
 ### [!DNL Advertising Search, Social, & Commerce] 中的新功能 {#advertising-search}
 
-查看 [&#x200B; [!DNL Advertising Search, Social, & Commerce] 中的新增功能](https://experienceleague.adobe.com/docs/advertising/search-social-commerce/home.html?lang=zh-Hant)
+查看 [ [!DNL Advertising Search, Social, & Commerce] 中的新增功能](https://experienceleague.adobe.com/docs/advertising/search-social-commerce/home.html?lang=zh-Hant)
 
 +++
 
@@ -763,7 +761,7 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 >[!NOTE]
 >
->_[!DNL Adobe Primetime]_&#x200B;現在稱為&#x200B;_[!DNL Adobe Pass]_。在品牌重塑工作完成之前，您可能很快就會在文件中看到這兩個品牌名稱。
+>_[!DNL Adobe Primetime]_現在稱為_[!DNL Adobe Pass]_。在品牌重塑工作完成之前，您可能很快就會在文件中看到這兩個品牌名稱。
 
 請參閱 [Adobe Pass 發行說明](https://experienceleague.adobe.com/docs/pass.html?lang=zh-Hant)以找到特定版本的資訊、系統需求、限制、已修正的問題和已知問題。
 
